# DeltaSpoofGui

./: .gitignore  .zig_ar_wrapper.bat  AGENTS.md  Cargo.toml  LICENSE  README.md  build.bat  build.py  cmd.txt  config.toml  install-systemd.sh  setup.sh  sni_list.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.mimocode/plans/: 1782637098222-jolly-river.md
crates/zerodpi/: Cargo.toml
crates/zerodpi-core/: Cargo.toml
crates/zerodpi-core/src/: config.rs  flow.rs  handler.rs  interceptor.rs  ip_scanner.rs  lib.rs  net.rs  proxy.rs  proxy_tester.rs  sni_scanner.rs  tls_template.rs
crates/zerodpi-core/src/methods/: mod.rs  tcp_segmentation.rs  tls_record_frag.rs  wrong_ack.rs  wrong_checksum.rs  wrong_md5.rs  wrong_md5_tls_frag.rs  wrong_seq.rs  wrong_seq_tls_frag.rs  wrong_seq_tls_record_frag.rs  wrong_seq_wrong_md5.rs  wrong_timestamp.rs
crates/zerodpi-platform/: Cargo.toml
crates/zerodpi-platform/src/: lib.rs  linux.rs  windows.rs
crates/zerodpi/src/: main.rs  tui.rs
deltaspoof-windows-x86_64/: README.md  config.toml  find-ip-results.json  ip_list.txt  sni_list.txt
release/: find-ip-results.json
