[package]
name = "zerodpi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core (platform-independent) logic for ZeroDPI: TLS template, flow tracking, bypass methods."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
ipnet.workspace = true
hickory-resolver.workspace = true

[dev-dependencies]
tempfile.workspace = true
