[package]
name = "deltaspoof"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DeltaSpoof: cross-platform DPI bypass proxy."
default-run = "deltaspoof"

[[bin]]
name = "deltaspoof"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time", "signal"] }
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true

rustls.workspace = true

zerodpi-core = { path = "../zerodpi-core" }
zerodpi-platform = { path = "../zerodpi-platform" }
ipnet.workspace = true
